Minor fix for prev-TOC-next toggler
Fixed:
- Mobile responsiveness for the prev-TOC-next toggler in single novel pages

--- a/config.toml
+++ b/config.toml
@@ -34,7 +34,7 @@ disablePathToLower = true
     weight = 2
 
     [[menu.niello]]
-    name = "TL Terms"
+    name = "Terms"
     url = "/common-tl/"
     weight = 3
 
