--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://pvc-tl.netlify.app/"
 languageCode = "en-nz"
-title = "PVC TL"
+title = "PVC-TL"
 
 theme = "niello"
 
@@ -17,7 +17,7 @@ disablePathToLower = true
 [params]
     keywords = "novels, bl, chinese translation"
     description = "Chinese BL novel translations, primarily involving the protagonist, villain and cannon fodder (PVC)"
-    copyright = "&#xA9; 2021 PVC TL"
+    copyright = "&#xA9; 2021 PVC-TL"
 
 [menu]
     [[menu.niello]]
@@ -29,11 +29,6 @@ disablePathToLower = true
     name = "Novels"
     url = "/novel/"
     weight = 2
-
-    [[menu.niello]]
-    name = "Terms"
-    url = "/common-tl/"
-    weight = 3
 
     [[menu.niello]]
     name = "Other"
